Added Sign Up Page and edited Login Page

--- a/public/LogIn.html
+++ b/public/LogIn.html
@@ -19,22 +19,21 @@
                     Log In
                 </div>
                 <div class="card-body" style="background-color: #ff6666; color:white">
-                    <form action="/action_page.php">
+                    <form action="">
                         <div class="mb-3 mt-3">
                             <label for="username" class="form-label">Username:</label>
-                            <input type="username" class="form-control" id="email" placeholder="Enter Username" name="username">
+                            <input type="text" class="form-control" id="username" placeholder="Enter Username">
                         </div>
                         <div class="mb-3">
                             <label for="pwd" class="form-label">Password:</label>
-                            <input type="password" class="form-control" id="pwd" placeholder="Enter password"
-                                name="pswd">
+                            <input type="password" class="form-control" id="pwd" placeholder="Enter password">
                         </div>
                         <div class="form-check mb-3">
                             <label class="form-check-label">
                                 <input class="form-check-input" type="checkbox" name="remember"> Remember me
                             </label>
                         </div>
-                        <button type="submit" class="btn btn-danger">Log In</button>
+                        <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Log In</button>
                     </form>
                 </div>
             </div>
