Updated Appointments, Activities, Medications and added Contact Us

--- a/public/Appointments.html
+++ b/public/Appointments.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activities</title>
+    <title>Appointments</title>
 </head>
 <body>
     <header>
-        <h1>Activities</h1>
+        <h1>Appointments</h1>
     </header>
     <nav>
         <ul>
@@ -19,12 +19,12 @@
     </nav>
     <main>
         <form method="get">
-            <label for="activityDate">Date:</label><input type="date" name="activityDate" id="activityDate"><br><br>
-            <label for="activityDuration">Duration: </label><input type="text" name="activityDuration" id="activityDuration">   <br><br>
-            <label for="activityDescription">Description: </label><input type="text" name="activityDescription" id="activityDescription">   <br><br>
+            <label for="appointmentDate">Date:</label><input type="date" name="appointmentDate" id="appointmentDate"><br><br>
+            <label for="medTitle">Medical Title: </label><input type="text" name="medTitle" id="medTitle"><br><br>
+            <label for="medicalProfessional">Medical Professional: </label><input type="text" name="medicalProfessional" id="medicalProfessional"><br><br>
+            <label for="appointmentPurpose">Purpose: </label><input type="text" name="appointmentPurpose" id="appointmentPurpose"><br><br>
             <input id="userSubmit" type="submit" value="Submit">
         </form><br>
-    
     </main>
     <footer><a href="contactus.html">Contact Us</a></footer>
 </body>
