--- a/public/contactus.html
+++ b/public/contactus.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activities</title>
+    <title>Contact Us</title>
 </head>
 <body>
     <header>
-        <h1>Activities</h1>
+        <h1>Contact the PHER Support Team</h1>
     </header>
     <nav>
         <ul>
@@ -19,12 +19,12 @@
     </nav>
     <main>
         <form method="get">
-            <label for="activityDate">Date:</label><input type="date" name="activityDate" id="activityDate"><br><br>
-            <label for="activityDuration">Duration: </label><input type="text" name="activityDuration" id="activityDuration">   <br><br>
-            <label for="activityDescription">Description: </label><input type="text" name="activityDescription" id="activityDescription">   <br><br>
+            <label for="name" >Name:   </label><input type="text" name="userName" id="userName"><br><br>
+            <label for="email">E-mail: </label><input type="text" name="email"    id="email">   <br><br>
+            <label for="comment">Comments:</label><br>
+            <textarea name="userComments" id="userComments" rows="2" cols="30"></textarea><br>
             <input id="userSubmit" type="submit" value="Submit">
-        </form><br>
-    
+        </form><br>    
     </main>
     <footer><a href="contactus.html">Contact Us</a></footer>
 </body>
