--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <nav>
           <ul>
            <li><a href="index.html">Home</a></li>
-           <li><a href="Visits.html">Visits</a></li>
+           <li><a href="Appointments.html">Appointments</a></li>
            <li><a href="Activities.html">Activities</a></li>
            <li><a href="Medications.html">Medications</a></li>
           </ul> 
@@ -24,7 +24,7 @@
           <h2>Manage your personal health record!</h2>
           <p>Type something here </p>
          </main> 
-         <footer>Footer section </footer>
+         <footer><a href="contactus.html">Contact Us</a></footer>
       </div>
 </body>
 </html>
