--- a/public/contactus.html
+++ b/public/contactus.html
@@ -20,10 +20,16 @@
     </nav>
     <main>
         <form method="get">
-            <label for="name" >Name:   </label><input type="text" name="userName" id="userName"><br><br>
-            <label for="email">E-mail: </label><input type="text" name="email"    id="email">   <br><br>
-            <label for="comment">Comments:</label><br>
-            <textarea name="userComments" id="userComments" rows="2" cols="30"></textarea><br>
+            <div class = "label-input">
+                <label for="name" >Name:   </label><input type="text" name="userName" id="userName">
+            </div>
+            <div class = "label-input">
+                <label for="email">E-mail: </label><input type="text" name="email"    id="email">
+            </div>
+            <div class = "label-input">
+                <label for="comment">Comments:</label><br>
+                <textarea name="userComments" id="userComments" rows="2" cols="30"></textarea>
+            </div>
             <input id="userSubmit" type="submit" value="Submit">
         </form><br>    
     </main>
