--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="indexHtml" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
         </header>  
         <nav>
           <ul>
-           <li><a href="index.html">Home</a></li>
+           <li><a href="index.html" class="active">Home</a></li>
            <li><a href="Appointments.html">Appointments</a></li>
            <li><a href="Activities.html">Activities</a></li>
            <li><a href="Medications.html">Medications</a></li>
