--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,38 +9,60 @@
     <script src="js/main.js"></script>
     <title> PHER Sign Up</title>
 </head>
+
 <body>
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-            <div class="card mt-4">
-                <div class="card-header" style="background-color: #8b0000; color: white;">
-                   Sign Up For Your PHER
-                </div>
-                <div class="card-body" style="background-color: #ff6666; color:white">
-                    <form action="">
-                        <div class="mb-3 mt-3">
-                            <label for="username" class="form-label">Username:</label>
-                            <input type="text" class="form-control" id="username" placeholder="Enter Username">
-                        </div>
-                        <div class="mb-3 mt-3">
-                            <label for="email" class="form-label">Email:</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter Email">
-                          </div>
-                        <div class="mb-3 mt-3">
-                            <label for="pwd" class="form-label">Password:</label>
-                            <input type="password" class="form-control" id="pwd" placeholder="Enter Password">
-                        </div>
-                        <div class="mb-3">
-                            <label for="confirmPass" class="form-label"> Confirm Password:</label>
-                            <input type="password" class="form-control" id="confirmPass" placeholder="Confirm Password">
-                        </div>
-                        <button type="submit" class="btn" style="background-color: #8b0000; color: white;">Submit</button>
-                    </form>
+    <header class="mb-4 pt-4 pb-4">
+        <h1>Sign Up</h1>
+    </header>
+    <main>
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4 col-sm-12">
+                <div class="card mt-4">
+                    <div class="card-header" style="background-color: #8b0000; color: white;">
+                        Sign Up For Your PHER
+                    </div>
+                    <div class="card-body" style="background-color: #ff6666; color:white">
+                        <form action="">
+                            <div class="mb-3 mt-3">
+                                <label for="username" class="form-label">Username:</label>
+                                <input type="text" class="form-control" id="username" placeholder="Enter Username">
+                            </div>
+                            <div class="mb-3">
+                                <label for="userRole" class="form-label">Role:</label>
+                                <select class="form-select" name="userRole" id="userRole">
+                                    <option selected disabled hidden>Choose a Role</option>
+                                    <option value="1">Patient</option>
+                                    <option value="2">Healthcare Provider</option>
+                                </select>
+                            </div>
+                            <div class="mb-3 ">
+                                <label for="email" class="form-label">Email:</label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter Email">
+                            </div>
+                            <div class="mb-3">
+                                <label for="pwd" class="form-label">Password:</label>
+                                <input type="password" class="form-control" id="pwd" placeholder="Enter Password">
+                            </div>
+                            <div class="mb-3">
+                                <label for="confirmPass" class="form-label"> Confirm Password:</label>
+                                <input type="password" class="form-control" id="confirmPass"
+                                    placeholder="Confirm Password">
+                            </div>
+                            <div class="mb-3 mt-3">
+                                Already have an account? <a href="LogIn.html">Log In</a>
+                            </div>
+                            <button type="submit" class="btn"
+                                style="background-color: #8b0000; color: white;">Submit</button>
+                        </form>
+                    </div>
                 </div>
             </div>
+            <div class="col-md-4"></div>
         </div>
-        <div class="col-4"></div>
-    </div>
+    </main>
+    <footer><a href="contactus.html">Contact Us</a></footer>
+
 </body>
+
 </html>
