--- a/public/ProviderLogin.html
+++ b/public/ProviderLogin.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="mb-4 pt-4 pb-4">
-        <h1>Patient Log In</h1>
+        <h1>Provider Log In</h1>
     </header>
     <main>
     <div class="row">
