Updated Sign Up Form

--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -29,6 +29,14 @@
                                 <input type="text" class="form-control" id="username" placeholder="Enter Username">
                             </div>
                             <div class="mb-3">
+                                <label for="firstName" class="form-label">First Name:</label>
+                                <input type="text" class="form-control" id="firstName" placeholder="Enter Your First Name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="lastName" class="form-label">Last Name:</label>
+                                <input type="text" class="form-control" id="lastName" placeholder="Enter Your Last Name">
+                            </div>
+                            <div class="mb-3">
                                 <label for="userRole" class="form-label">Role:</label>
                                 <select class="form-select" name="userRole" id="userRole">
                                     <option selected disabled hidden>Choose a Role</option>
