Updated Sign Up Page to redirect to Home Page after submission.

--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -23,7 +23,7 @@
                         Sign Up For Your PHER
                     </div>
                     <div class="card-body" style="background-color: #ff6666; color:white">
-                        <form action="">
+                        <form action="index.html">
                             <div class="mb-3 mt-3">
                                 <label for="username" class="form-label">Username:</label>
                                 <input type="text" class="form-control" id="username" placeholder="Enter Username">
