Tweaked Medications Form.

--- a/public/Medications.html
+++ b/public/Medications.html
@@ -33,34 +33,35 @@
                     <div class="card-body" style="background-color: #ff6666; color:white;">
 
                         <form method="get">
-                            <div>
+                            <div class="mb-3 mt-3">
                                 <label for="startDate" class="form-label">Start Date:</label>
                                 <input type="date" class="form-control" name="startDate" id="startDate">
-
+                            </div>
+                            <div class="mb-3">
                                 <label for="endDate" class="form-label">End Date:</label>
                                 <input type="date" class="form-control" name="endDate" id="endDate">
                             </div>
-                            <div>
+                            <div class="mb-3">
                                 <label for="prescriber" class="form-label">Prescriber:</label>
                                 <input type="text" class="form-control" name="Prescriber" id="Prescriber" placeholder="Who Prescribed The Medication">
                             </div>
-                            <div>
+                            <div class="mb-3">
                                 <label for="medication" class="form-label">Medication:</label>
                                 <input type="text" class="form-control" name="medication" id="medication" placeholder="Medication Name">
                             </div>
-                            <div>
+                            <div class="mb-3">
                                 <label for="quantity" class="form-label">Quantity:</label>
                                 <input type="text" class="form-control" name="quantity" id="quantity" placeholder="Number of Pills">
                             </div>
-                            <div>
+                            <div class="mb-3">
                                 <label for="quantityUnits" class="form-label">Units:</label>
                                 <input type="text" class="form-control" name="quantityUnits" id="quantityUnits" placeholder="10 mg, 100 mcg, etc...">
                             </div>
-                            <div>
+                            <div class="mb-3">
                                 <label for="frequency" class="form-label">Frequency:</label>
                                 <input type="text" class="form-control" name="frequency" id="frequency" placeholder="How Often You Take the Medication">
                             </div>
-                            <div>
+                            <div class="mb-3">
                                 <label for="sideEffects" class="form-label">Side Effects:</label>
                                 <textarea name="sideEffects" class="form-control" id="sideEffects" placeholder="Dizziness, Headaches, etc..."></textarea>
                             </div>
