Tweaked all the forms a little more.

--- a/public/ResetPassword.html
+++ b/public/ResetPassword.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="card-body" style="background-color: #ff6666; color:white">
                     <form action="LogIn.html">
-                        <div class="mb-3 mt-3">
+                        <div class="mb-3">
                             <label for="pwd" class="form-label" >New Password:</label>
                             <input type="password" class="form-control" id="pwd" placeholder="Enter Password">
                         </div>
