--- a/public/Activities.html
+++ b/public/Activities.html
@@ -31,15 +31,15 @@
                 </div>
                 <div class="card-body" style="background-color: #ff6666; color:white;">
                     <form method="get">
-                        <div>
+                        <div class="mb-3">
                             <label for="activityDate" class="form-label">Date:</label>
                             <input type="date" class="form-control" name="activityDate" id="activityDate">
                         </div>
-                        <div>
+                        <div class="mb-3">
                             <label for="activityDuration" class="form-label">Duration: </label>
                             <input type="text" class="form-control" name="activityDuration" id="activityDuration" placeholder="How Long the Activity Lasted">
                         </div>
-                        <div>
+                        <div class="mb-3">
                             <label for="activityDescription" class="form-label">Description: </label>
                             <input type="text" class="form-control" name="activityDescription" id="activityDescription" placeholder="Lifted at the Gym, Went on a Run, etc...">
                         </div>
