--- a/public/Appointments.html
+++ b/public/Appointments.html
@@ -31,27 +31,27 @@
                     </div>
                     <div class="card-body" style="background-color: #ff6666; color:white;">
                 <form method="get">
-                    <div>
+                    <div class="mb-3">
                         <label for="appointmentDate" class="form-label">Date:</label>
                         <input type="date" class="form-control" name="appointmentDate" id="appointmentDate">
                     </div>
-                    <div>
+                    <div class="mb-3">
                         <label for="medTitle" class="form-label">Medical Title: </label>
                         <input type="text" class="form-control" name="medTitle" id="medTitle" placeholder="Dentist, Pediatrician, etc...">
                     </div>
-                    <div>
+                    <div class="mb-3">
                         <label for="medicalProfessional" class="form-label">Provider Name:</label>
                         <input type="text" class="form-control" name="medicalProfessional" id="medicalProfessional" placeholder="Name of Physician">
                     </div>
-                    <div>
+                    <div class="mb-3">
                         <label for="appointmentPurpose" class="form-label">Purpose: </label>
                         <input type="text" class="form-control" name="appointmentPurpose" id="appointmentPurpose" placeholder="Checkup, Vaccination, etc...">
                     </div>
-                    <div>
+                    <div class="mb-3">
                         <label for="phoneNumber" class="form-label">Phone number:</label>
                         <input type="tel" class="form-control" name="phoneNumber" id="phoneNumber" placeholder="Number for the Provider">
                     </div>
-                    <div>
+                    <div class="mb-3">
                         <label for="email" class="form-label">Email:</label>
                         <input type="email" class="form-control" name="email" id="email" placeholder="Email for the Provider, if Applicable">
                     </div>
