--- a/public/Medications.html
+++ b/public/Medications.html
@@ -33,7 +33,7 @@
                     <div class="card-body" style="background-color: #ff6666; color:white;">
 
                         <form method="get">
-                            <div class="mb-3 mt-3">
+                            <div class="mb-3">
                                 <label for="startDate" class="form-label">Start Date:</label>
                                 <input type="date" class="form-control" name="startDate" id="startDate">
                             </div>
