--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="card-body" style="background-color: #ff6666; color:white">
                         <form action="index.html">
-                            <div class="mb-3 mt-3">
+                            <div class="mb-3">
                                 <label for="username" class="form-label">Username:</label>
                                 <input type="text" class="form-control" id="username" placeholder="Enter Username">
                             </div>
@@ -57,7 +57,7 @@
                                 <input type="password" class="form-control" id="confirmPass"
                                     placeholder="Confirm Password">
                             </div>
-                            <div class="mb-3 mt-3">
+                            <div class="mb-3">
                                 Already have an account? <a href="LogIn.html">Log In</a>
                             </div>
                             <button type="submit" class="btn"
